--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ssa
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
+
+
 
 
